:bug: fix code line word wrap error

--- a/source/css/random.styl
+++ b/source/css/random.styl
@@ -577,8 +577,8 @@ figure.highlight
   td.gutter
     padding-right: 20px;
 
-  .line
-    white-space: pre-wrap;
+  // .line
+    // white-space: pre-wrap;
 
 code
   font-family: codeFontFamily;
